--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "dependencies": {
     "@types/node": "^14.14.5",
+    "@types/node-fetch": "^2.5.7",
     "@typescript-eslint/eslint-plugin": "^4.6.0",
     "@typescript-eslint/parser": "^4.6.0",
     "consola": "^2.15.0",
@@ -16,6 +17,7 @@
     "eslint": "^7.2.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.21.2",
+    "node-fetch": "^2.6.1",
     "nodemon": "^2.0.6",
     "sequelize": "^6.3.5",
     "sqlite": "^4.0.15",
