--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@types/express": "^4.17.8",
     "@types/node": "^14.14.5",
     "@types/node-fetch": "^2.5.7",
     "@typescript-eslint/eslint-plugin": "^4.6.0",
@@ -17,6 +18,8 @@
     "eslint": "^7.2.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.21.2",
+    "express": "^4.17.1",
+    "helmet": "^4.1.1",
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.6",
     "sequelize": "^6.3.5",
